Revert "Attempting to fix stage being too big on mobile chrome"
This reverts commit d33264cb62c24438442bf1b85dc62517eced5a48.

--- a/css/main.css
+++ b/css/main.css
@@ -226,9 +226,7 @@ button.accordion:focus {
 #intro {
     width: 100%;
     height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
-    background-color: #333c4a;
-    transition: height 1s ease; 
+    background-color: #333c4a;    
 }
 
 #intro canvas {
